src/components/layout/navbar/Navbar.module.css
.container {
  z-index: 2;

  display: flex;
  align-items: center;
  justify-content: space-between;

  max-width: 100%;
  height: 6.5rem;

  font-size: 1.5rem;

  padding-inline: 1.5rem;
}

.logo {
  font-size: 3rem;
}

.links,
.mobile_links {
  flex-grow: 0.25;
  list-style-type: none;

  display: flex;
  justify-content: space-between;
}

.mobile_links,
.mobile_links_button {
  display: none;
}

.mobile_links_container {
  position: fixed;
  top: 0;
  bottom: 0;
  right: 0;

  z-index: 20;

  width: 50%;

  background-color: var(--color-background);

  border-left: 2px solid var(--color-text);

  padding: 0.625rem;

  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.mobile_links_container > * {
  flex-grow: 0;
}

.mobile_links_container ul {
  display: flex;
  flex-direction: column;
  gap: 1rem;

  align-items: flex-end;
}

@media only screen and (max-width: 768px) {
  .links {
    display: none;
  }

  .mobile_links_button {
    display: block;
  }

  .mobile_links {
    display: flex;
  }
}

